<resources>
    <string name="app_name">Griffin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_text_input">Your Name</string>
    <string name="pin">Pin</string>
    <string name="fab">FAB</string>
    <string name="no_connection">No Connection</string>
    <string name="instruction_text">Please Connect to the Device\'s Access Point</string>
    <string name="retry">Retry</string>
    <string name="register_device">Register Device</string>
    <string name="device_name">Device Name</string>
    <string name="ssid">WiFi SSID</string>
    <string name="password">WiFi Password</string>
    <string name="contact_1">Contact 1</string>
    <string name="contact_2">Contact 2 (Optional)</string>
    <string name="contact_3">Contact 3 (Optional)</string>
    <string name="number_of_sensors">Number of Sensors</string>
    <string name="register">Register</string>
    <string name="additional_information">Additional Info (Optional)</string>
    <string name="open">%d OPEN</string>
    <string name="locked">%d LOCKED</string>
    <string name="dashboard">Dashboard</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="share">Share</string>
    <string name="share_you_device">Share You Device</string>
    <string name="instructions_text">Open Scan option from Home screen and point your camera at this QR code to add this device to your phone</string>
    <string name="qr_code">QR Code</string>
    <string name="edit_name">Edit Name</string>
    <string name="save">Save</string>
    <string name="scan">Scan</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="scanning">Scanning…</string>
    <string name="add_device">Add Device</string>
    <string name="try_again">Try Again</string>
    <string name="done">Done</string>
    <string name="sensor_breach">Security Breach Occurred at %s</string>
    <string name="sensors">Sensors</string>
    <string name="delete">Delete</string>
    <string name="delete_this_device">Delete This Device</string>
    <string name="device_offline_warning">WARNING: All Devices are offline!</string>
    <string name="device_online">All Devices are Online</string>
    <string name="cancel">Cancel</string>
    <string name="sensor_name">Sensor Name</string>
    <string name="empty_field_warning">Field can\'t be Empty</string>
    <string name="locked_status">LOCKED</string>
    <string name="unlocked_status">OPEN</string>
    <string name="whooops">Whooops!</string>
    <string name="too_many_sensors">Too Many Sensors</string>
    <string name="new_device_instruction">Click the \'+\' icon below to register your First Device or click the \'scan\' icon on top to scan a Device QR Code</string>
    <string name="no_device_found">No Device Found!</string>
    <string name="register_new_device">Register New Device</string>
    <string name="scan_new_device">Scan New Device</string>
    <string name="about">About</string>
    <string name="about_this_app">About this app</string>
    <string name="contact_us">Contact us</string>
    <string name="contact">Contact</string>
    <string name="edit">Edit</string>
    <string name="edit_device">Edit Device</string>
    <string name="custom_message_optional">Custom Message (Optional)</string>
    <string name="delete_warning">This device and all it\'s data will be lost. Are you sure you want to delete?</string>
    <string name="delete_device">Delete Device</string>
    <string name="save_changes">Save Changes</string>
    <string name="please_wait">Please Wait…</string>
    <string name="device_dashboard">Device Dashboard</string>
    <string name="enable">Enable</string>
    <string name="auto_start_description">Griffin service needs to work in the background to provide up-to-date device status in real time. Please enable Auto Start permission so that if the background process gets killed accidentally by your device it can restart automatically</string>
    <string name="enable_auto_start">Enable Auto Start</string>
    <string name="reconnect">Reconnect</string>
    <string name="persistent_channel_description">Background Connectivity Monitor</string>
    <string name="alert_channel_description">Secruity Breach Notification</string>
</resources>