<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/editDevice"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        android:contentDescription="@string/edit_device"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/shareDevice"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:contentDescription="@string/share_you_device"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/deleteDevice"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:contentDescription="@string/delete_this_device"
        app:showAsAction="never" />

</menu>